# burn-unet

./: Cargo.toml  LICENSE  README.md  download_dataset.sh
examples/drive/: .gitignore  Cargo.toml  README.md  download_dataset.sh  prepare_dataset.py
examples/drive/src/: drive_dataset.rs  lib.rs  main.rs
src/: lib.rs
src/dataset/: mod.rs  segmentation.rs
src/model/: blocks.rs  mod.rs
src/models/: mod.rs
src/models/unet/: mod.rs  model.rs
src/training/: learner.rs  loss.rs  metrics.rs  mod.rs  segmentation_cross_entropy.rs
src/training/loss/: cross_entropy.rs  mod.rs
utils/: resize_images.py  train_val_split.py
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/tasks/: train.rs
