[package]
name = "burn-unet"
version = "0.1.0"
edition = "2024"

[features]
default = ["training", "dataset", "unet"]
models = []
unet = ["models"]
training = []
dataset = []

[dependencies]
burn = { version = "0.16.0", features = ["default", "fusion", "ndarray", "std", "train", "vision", "wgpu"] }
bincode = "=2.0.0-rc.3"
derive-new = "0.7.0"
thiserror = "2.0.12"
