[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
indicatif = "0.17"
walkdir = "2.4"
glob = "0.3"

rust-unet = { path = "..", features = ["full"] }
burn.workspace = true
